--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@calimoto-gmbh/calimoto-react-scripts",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "calimoto Configuration and scripts for Create React App.",
   "repository": "calimoto-GmbH/create-react-app",
   "license": "MIT",
@@ -46,6 +46,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "lnf": "^1.3.8",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
