--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@calimoto-gmbh/calimoto-react-scripts",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "calimoto Configuration and scripts for Create React App.",
   "repository": "calimoto-GmbH/create-react-app",
   "license": "MIT",
@@ -54,6 +54,7 @@
     "raf": "3.4.0",
     "react-dev-utils": "^5.0.1",
     "resolve": "1.6.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
