--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@calimoto-gmbh/calimoto-react-scripts",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "calimoto Configuration and scripts for Create React App.",
   "repository": "calimoto-GmbH/create-react-app",
   "license": "MIT",
@@ -47,6 +47,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lnf": "^1.3.8",
+    "node-sass": "^4.9.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
