--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@calimoto-gmbh/calimoto-react-scripts",
-  "version": "1.3.4",
+  "version": "1.4.0",
   "description": "calimoto Configuration and scripts for Create React App.",
   "repository": "calimoto-GmbH/create-react-app",
   "license": "MIT",
@@ -31,6 +31,7 @@
     "camelcase": "^5.0.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "compression-webpack-plugin": "^1.1.12",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
